Mon Mar 16 16:37:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/tcltklib.c (eventloop_sleep, lib_eventloop_core),
	  (lib_watchdog_core): tv_usec is not time_t.

Mon Mar 16 12:30:07 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (REVISION_H): keeps timestamp of revision.h.
	  [ruby-core:22900]

	* tool/ifchange, win32/ifchange.bat: extended --timestamp option.

Mon Mar 16 09:28:58 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, common.mk, win32/Makefile.sub: added preprocessing rules.

Sun Mar 15 12:34:17 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/minitest/test_mini_test.rb: fixed tests depending on the
	  detail of floating point representation.

Sun Mar 15 12:01:36 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rubygems/installer.rb (Gem::Installer#shebang): fix for env
	  shebang.

Sun Mar 15 11:15:18 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h ({RSTRING,RBIGNUM}_EMBED_LEN_MAX): made int.

	* include/ruby/ruby.h (OBJ_{TAINTED,UNTRUSTED,FROZEN}): return int.

	* include/ruby/encoding.h (ENC_CODERANGE): ditto.

Sun Mar 15 11:11:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_hash_uint, rb_hash_start, rb_hash_end): use VALUE
	  rather than unsigned int.

Sun Mar 15 11:00:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (load_file_internal): stop the timer thread before exec.

Sun Mar 15 09:17:26 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (.y.c): use SRC_FILE which contains slashes instead of
	  backslashes.  [ruby-core:22891]

Sun Mar 15 08:26:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (srcs-ext): creates ext/dl/callback/callback.c also.

Sun Mar 15 03:29:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (SAVED_GROUP_ID, p_gid_switch): should be rb_gid_t.

Sun Mar 15 02:53:13 2009  Tanaka Akira  <akr@fsij.org>

	* string.c (rb_str_subpat): accept capture name.
	  (rb_str_aref): follow above change.