@@ -1,3 +1,8 @@
+Mon Mar 16 17:15:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* test/dl/test_win32.rb (Win32API): enclosed by DL::TestWin32.
+	  [ruby-core:22827]
+
 Mon Mar 16 16:37:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/tk/tcltklib.c (eventloop_sleep, lib_eventloop_core),
